--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # MySQL Database Configuration
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=your_password
+DB_USER=paletto_user
+DB_PASSWORD=paletto_password
+DB_ROOT_PASSWORD=paletto_root_password
 DB_NAME=paletto_cards
 
 # Admin Authentication
