--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,18 +34,46 @@ jobs:
           DB_NAME: ${{ secrets.DB_NAME }}
           ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
 
+      - name: Create deployment archive
+        run: |
+          tar -czf deploy.tar.gz --exclude=node_modules --exclude=.git --exclude=.next .
+
+      - name: Copy files to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          port: ${{ secrets.EC2_PORT || 22 }}
+          source: "deploy.tar.gz"
+          target: "/tmp/"
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          port: ${{ secrets.EC2_PORT }}
+          port: ${{ secrets.EC2_PORT || 22 }}
           script: |
-            cd /home/${{ secrets.EC2_USER }}/palettobusinesscard
+            # Create app directory if not exists
+            mkdir -p /home/${{ secrets.EC2_USER }}/palettobusinesscard
 
-            # Pull latest code
-            git pull origin master
+            # Backup current deployment
+            if [ -d "/home/${{ secrets.EC2_USER }}/palettobusinesscard/.next" ]; then
+              mv /home/${{ secrets.EC2_USER }}/palettobusinesscard /home/${{ secrets.EC2_USER }}/palettobusinesscard_backup_$(date +%Y%m%d_%H%M%S)
+              mkdir -p /home/${{ secrets.EC2_USER }}/palettobusinesscard
+            fi
+
+            # Extract new files
+            cd /home/${{ secrets.EC2_USER }}/palettobusinesscard
+            tar -xzf /tmp/deploy.tar.gz
+            rm /tmp/deploy.tar.gz
+
+            # Copy environment file
+            if [ -f "/home/${{ secrets.EC2_USER }}/palettobusinesscard_backup_*/.env" ]; then
+              cp /home/${{ secrets.EC2_USER }}/palettobusinesscard_backup_*/.env .env
+            fi
 
             # Install dependencies
             npm ci
@@ -59,13 +87,17 @@ jobs:
             # Save PM2 configuration
             pm2 save
 
+            # Keep only last 3 backups
+            cd /home/${{ secrets.EC2_USER }}
+            ls -dt palettobusinesscard_backup_* | tail -n +4 | xargs -r rm -rf
+
       - name: Verify deployment
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          port: ${{ secrets.EC2_PORT }}
+          port: ${{ secrets.EC2_PORT || 22 }}
           script: |
             pm2 list
             echo "Deployment completed successfully!"
