--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,23 +36,14 @@ jobs:
 
       - name: Create deployment archive
         run: |
-          tar -czf deploy.tar.gz \
-            --exclude=node_modules \
-            --exclude=.git \
-            --exclude=.github \
-            --exclude=.env \
-            .next \
-            public \
-            src \
-            package.json \
-            package-lock.json \
-            next.config.js \
-            tsconfig.json \
-            tailwind.config.ts \
-            postcss.config.js \
-            schema.sql \
-            docker-compose.yml \
-            .dockerignore
+          # Create list of files to include
+          FILES=".next src package.json package-lock.json next.config.js tsconfig.json tailwind.config.ts postcss.config.js schema.sql docker-compose.yml .dockerignore"
+
+          # Add optional files if they exist
+          [ -d "public" ] && FILES="$FILES public"
+
+          # Create tar archive
+          tar -czf deploy.tar.gz $FILES
 
       - name: Copy files to EC2
         uses: appleboy/scp-action@master
